[tool.poetry]
name = "mercari-souba"
version = "0.1.0"
description = ""
authors = ["Akira Hayashi <smxshxishxad@me.com>"]
license = "MIT"
packages = [
    {include = "mercarimp", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
