[tool.poetry]
name = "mercarimp"
version = "0.1.0"
description = ""
authors = ["Akira Hayashi <smxshxishxad@me.com>"]
license = "MIT"
packages = [
    {include = "mercarimp", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.1.0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
